# hyperlocal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  HYPERLOCAL_SPEC_v1.md  LLM_MLX_SETUP.md  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/api/: main.py
backend/api/routes/: generate.py
backend/hyperlocal/: comfyui_flyer_pipeline.py  comfyui_provider.py  config.py  db.py  health.py  image_providers.py  llm_providers.py  models.py  openai_helpers.py  persistence.py  pipeline.py  prompt_templates.py  qc.py  typst_renderer.py
backend/scripts/: __init__.py  check_stack.py  generate_ad_creatives.py  generate_ad_prompts.py  generate_backgrounds.py  generate_comfyui_flyers.py  generate_creatives.py  generate_creatives_advanced.py  generate_hvac_ads.py  generate_smoothie_ads.py  test_ollama_image.py
backend/sql/: schema.sql
comfyui/workflows/: README.md  ad_background.json  flyer_ad_v1_template.json  flyer_full.json  flyer_full_template.json
docs/: creative_ad_prompting_notes.md  ollama_image_testing.md
hyperlocal/: config.py  persistence_schemas.py  pipeline.py  prompt_templates.py  schemas.py  storage.py
mlx/: Dockerfile.cuda  prefetch_models.py  run_mlx_servers.sh
scripts/: download_sdxl_base.py  generate_flyer.py  init_db.py
sdxl/: README.md
web/: Dockerfile  README.md
web/src/app/: page.tsx
